# hermes-poc-portal

./: .dockerignore  .env.example  .gitignore  README.md  compose.e2e.controller.yaml  compose.e2e.portal.yaml  compose.yaml
controller/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.in  requirements.in
controller/app/: errors.py  main.py
controller/tests/: conftest.py  test_health.py  test_instances_api.py  test_locking.py  test_no_shell.py  test_redaction.py  test_registry_whitelist.py  test_schema_compliance.py  test_state_machine.py  test_timeout.py
hermes-poc-specification-v0.1/: .env.example  README.md
hermes-poc-specification-v0.1/contracts/: environment.yaml  versions.yaml
portal/: .dockerignore  Dockerfile
portal/backend/: alembic.ini  (+3 more)
scripts/: apply-controller-engine-evidence  bootstrap-controller-e2e-engine  build-all  cleanup-controller-e2e-engine  collect-controller-e2e-engine  collect-controller-environment-evidence  collect-portal-infrastructure-evidence  collect-test-results  dev-smoke-controller  finalize-infrastructure-evidence  prepare-controller-e2e-engine  run-controller-e2e  run-m0-m1-acceptance  run-portal-e2e  run-unit-tests  verify-acceptance-source  verify-controller-e2e-engine
tests/: fixture-manifest.yaml
tests/hermes-fixture/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.in
tests/hermes-fixture/app/: main.py
tests/hermes-fixture/src/hermes_fixture/: __init__.py  __main__.py  app.py  config.py  server.py
tests/hermes-fixture/tests/: test_app.py  test_config.py  test_server.py
(+130 files in other folders)
