[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-runtime-fixture"
version = "0.1.0"
description = "TEST ONLY deterministic runtime fixture for Hermes Controller E2E"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi==0.128.8",
  "uvicorn==0.34.3",
]

[project.optional-dependencies]
test = [
  "httpx==0.28.1",
  "pytest==8.4.2",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]
